summative.moria.Moria.scala.error
Erreur de compilation :
Moria:11: error: not found: value deposeBiscuit
  deposeBiscuit()
  ^