summative.moria.Moria.scala.code
back()
do {
  while (!estSurBiscuit()){
    avance()
  }
  prendBiscuit()
  back()
  while (!estSurBiscuit()){
    avance()
  }
  deposeBiscuit()
  back()
  
  
  
  
  
  
  
  
  
  
  
} while (!estFaceMur())
droite()
avance()
gauche()
avance()
avance()